Add profile change feature
