# swagger.yaml
@@ -92,11 +92,109 @@ paths:
                     type: string
         default:
           description: Unexpected error
-  /api/user/{user_id}:
+
+  /api/user/profile:
+    put:
+      summary: Update a user profile (username and email).
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                username:
+                  type: string
+                email:
+                  type: string
+                email_old:
+                  type: string
+      responses:
+        "200":
+          description: A user object.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+                  email:
+                    type: string
+                  crated_at:
+                    type: string
+        default:
+          description: Unexpected error.
+  /api/user/password:
+    put:
+      summary: Update a user password.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                password:
+                  type: string
+      responses:
+        "200":
+          description: A user object.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+                  email:
+                    type: string
+                  crated_at:
+                    type: string
+        default:
+          description: Unexpected error.
+  /api/user/{id}:
+    get:
+      summary: Return a user by ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: user ID
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+      responses:
+        "200":
+          description: Return a user object.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+                  email:
+                    type: string
+                  created_at:
+                    type: string
+        default:
+          description: Unexpected error.
     delete:
       summary: Deletes a user by ID.
       parameters:
-        - name: user_id
+        - name: id
           in: path
           required: true
           description: The ID of the user to delete.
@@ -188,11 +286,11 @@ paths:
                     type: string
         default:
           description: Unexpected error.
-  /api/thread/{thread_id}:
+  /api/thread/{id}:
     get:
       summary: Returns a thread.
       parameters:
-        - name: thread_id
+        - name: id
           in: path
           required: true
           description: Thread id.
@@ -225,7 +323,7 @@ paths:
     delete:
       summary: Delete a thread.
       parameters:
-        - name: thread_id
+        - name: id
           in: path
           required: true
           description: Thread ID to delete
@@ -330,11 +428,11 @@ paths:
                     type: string
         default:
           description: Unexpected error
-  /api/comment/{comment_id}:
+  /api/comment/{id}:
     delete:
       summary: Delete a comment by ID.
       parameters:
-        - name: comment_id
+        - name: id
           in: path
           required: true
           description: ID for a deleting comment.
